syntax = "proto3";

package hotel.v1alpha;

message Hotel {
  string name = 1;
  int32 id = 2;
  string city = 3;
  string address = 4;
}
service HotelCRUDService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Add (AddRequest) returns (AddResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  int32 id = 1;
}

message GetResponse {
  repeated Hotel Hotels = 1;
}

message AddRequest {
  string name = 1;
  string city = 2;
  string address = 3;
}
message AddResponse {
  Hotel hotel = 1;
}
message UpdateRequest {
  int32 id = 1;
  string name = 2;
  string city = 3;
  string address = 4;
}
message UpdateResponse {
  Hotel hotel = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  Hotel hotel = 1;
}
